testing of flows

--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -11,41 +11,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "09124eba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "connecting...\n",
-      "Connection successful!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from datetime import timedelta\n",
+    "import pandas as pd\n",
+    "\n",
     "import pyodbc\n",
     "from sql.config import SQL_SERVER, DB_NAME\n",
     "import sql.naming_convention as nc\n",
-    "\n",
-    "conn_str = (\n",
-    "            f'DRIVER={{ODBC Driver 17 for SQL Server}};'\n",
-    "            f'SERVER={SQL_SERVER};'\n",
-    "            f'DATABASE={DB_NAME};'\n",
-    "            f'Trusted_Connection=yes;'\n",
-    "            f'Encrypt=yes;'\n",
-    "            f'TrustServerCertificate=yes;'\n",
-    "        )\n",
-    "\n",
-    "print('connecting...')\n",
-    "sql_connection = pyodbc.connect(conn_str, timeout=60)\n",
-    "print(\"Connection successful!\")"
+    "from sql.sql_requests import SQL_Communicator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "e3f4aaec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_time_delta(duration: timedelta):\n",
+    "    # Get the total seconds\n",
+    "    total_seconds = duration.total_seconds()\n",
+    "    # days = duration.days\n",
+    "    hours = duration.seconds // 3600  # Convert seconds to hours\n",
+    "    minutes = (duration.seconds // 60) % 60  # Convert remaining seconds to minutes\n",
+    "    seconds = duration.seconds % 60\n",
+    "    if hours > 0:\n",
+    "        return f'{hours:02d}:{minutes:02d}:{int(seconds):02d}'\n",
+    "    if minutes > 0:\n",
+    "        return f'{minutes:02d}:{int(seconds):02d}'\n",
+    "    return f'{total_seconds:4.2f}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -53,26 +56,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trying to run : EXEC dbo.PullData_Symbol_IBESTickerEnhanced2_prc\n"
+      "connecting...\n",
+      "Connection successful!\n",
+      "flow for target entity Symbol_IBESTickerEnhanced..\n",
+      "- EXEC dbo.MergeData_Symbol_IBESTickerEnhanced2_prc...\n",
+      "- EXEC dbo.PullData_Symbol_IBESTickerEnhanced2_prc...\n",
+      "['Symbol_IBESTickerEnhanced2', '0.50', '0.35', '0.85']\n",
+      "flow for target entity Symbol_TickerEnhanced..\n",
+      "- EXEC dbo.MergeData_Symbol_TickerEnhanced2_prc...\n",
+      "- EXEC dbo.PullData_Symbol_TickerEnhanced2_prc...\n",
+      "['Symbol_TickerEnhanced2', '31.11', '28.82', '59.93']\n",
+      "flow for target entity Symbol_CusipEnhanced..\n",
+      "- EXEC dbo.MergeData_Symbol_CusipEnhanced2_prc...\n",
+      "- EXEC dbo.PullData_Symbol_CusipEnhanced2_prc...\n",
+      "['Symbol_CusipEnhanced2', '27.29', '24.82', '52.12']\n",
+      "flow for target entity Symbol_FTCusip6Symbol..\n",
+      "- EXEC dbo.MergeData_Symbol_FTCusip6Symbol2_prc...\n",
+      "- EXEC dbo.PullData_Symbol_FTCusip6Symbol2_prc...\n",
+      "['Symbol_FTCusip6Symbol2', '2.00', '3.07', '5.07']\n",
+      "flow for target entity Symbol_FTCusip9Symbol..\n",
+      "- EXEC dbo.PullData_Symbol_FTCusip9Symbol2_prc...\n"
      ]
     }
    ],
    "source": [
-    "entity_name = 'Symbol_IBESTickerEnhanced'\n",
-    "sp_name = nc.pull_sp_name(nc.default_rename(entity_name))\n",
-    "exec_stm = f\"EXEC {sp_name}\"\n",
-    "cursor = sql_connection.cursor()\n",
-    "print(f'trying to run : {exec_stm}')\n",
-    "cursor.execute(exec_stm)\n"
+    "entity_names =  ['Symbol_IBESTickerEnhanced',\n",
+    "        'Symbol_TickerEnhanced',\n",
+    "        'Symbol_CusipEnhanced',\n",
+    "        'Symbol_FTCusip6Symbol',\n",
+    "        'Symbol_FTCusip9Symbol',\n",
+    "        'Symbol_FTISINSymbol',\n",
+    "        'Symbol_ISINEnhanced',\n",
+    "        'Symbol_SECCIKEnhanced',\n",
+    "        'Symbol_SECCIKSymbol',\n",
+    "        'Symbol_SedolEnhanced',\n",
+    "        'Symbol_FTSEDOLSymbol',]\n",
+    "\n",
+    "durations = []\n",
+    "with SQL_Communicator() as sc:\n",
+    "    for en in entity_names:\n",
+    "        print(f'flow for target entity {en}..')\n",
+    "        en2 = nc.default_rename(en)\n",
+    "        sp_names = [nc.pull_sp_name(en2), nc.merge_sp_name(en2)]\n",
+    "        ent_durs, flow_td = [en2], timedelta()  \n",
+    "        for sp_name in sp_names:\n",
+    "            exec_stm = f\"EXEC {sp_name}\"\n",
+    "            print(f'- {exec_stm}...')\n",
+    "            td = sc.get_execution_metrics(exec_stm)\n",
+    "            ent_durs.append(format_time_delta(td))\n",
+    "            flow_td += td\n",
+    "        ent_durs.append(format_time_delta(flow_td))\n",
+    "        print(ent_durs)\n",
+    "        durations.append(ent_durs)\n",
+    "        # ent_durs.append(sum(ent_durs))\n",
+    "columns = ['Entity name', 'Pull SP', 'Merge SP',  'sum']\n",
+    "df = pd.DataFrame(durations, columns = columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9e97f970",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity name</th>\n",
+       "      <th>Pull SP</th>\n",
+       "      <th>Merge SP</th>\n",
+       "      <th>sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Symbol_FTCusip6Symbol2</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>4.63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Entity name Pull SP Merge SP   sum\n",
+       "0  Symbol_FTCusip6Symbol2    1.69     2.94  4.63"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
