--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -64,7 +64,44 @@
       "['Symbol_IBESTickerEnhanced2', '0.41', '1.07', '1.48']\n",
       "flow for target entity Symbol_TickerEnhanced..\n",
       "- EXEC dbo.PullData_Symbol_TickerEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_TickerEnhanced2_prc...\n"
+      "- EXEC dbo.MergeData_Symbol_TickerEnhanced2_prc...\n",
+      "['Symbol_TickerEnhanced2', '29.88', '34.77', '01:04']\n",
+      "flow for target entity Symbol_CusipEnhanced..\n",
+      "- EXEC dbo.PullData_Symbol_CusipEnhanced2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_CusipEnhanced2_prc...\n",
+      "['Symbol_CusipEnhanced2', '25.70', '29.43', '55.13']\n",
+      "flow for target entity Symbol_FTCusip6Symbol..\n",
+      "- EXEC dbo.PullData_Symbol_FTCusip6Symbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_FTCusip6Symbol2_prc...\n",
+      "['Symbol_FTCusip6Symbol2', '3.19', '2.97', '6.16']\n",
+      "flow for target entity Symbol_FTCusip9Symbol..\n",
+      "- EXEC dbo.PullData_Symbol_FTCusip9Symbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_FTCusip9Symbol2_prc...\n",
+      "['Symbol_FTCusip9Symbol2', '19.16', '11.67', '30.82']\n",
+      "flow for target entity Symbol_FTISINSymbol..\n",
+      "- EXEC dbo.PullData_Symbol_FTISINSymbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_FTISINSymbol2_prc...\n",
+      "['Symbol_FTISINSymbol2', '50.19', '58.97', '01:49']\n",
+      "flow for target entity Symbol_ISINEnhanced..\n",
+      "- EXEC dbo.PullData_Symbol_ISINEnhanced2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_ISINEnhanced2_prc...\n",
+      "['Symbol_ISINEnhanced2', '59.90', '01:16', '02:15']\n",
+      "flow for target entity Symbol_SECCIKEnhanced..\n",
+      "- EXEC dbo.PullData_Symbol_SECCIKEnhanced2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_SECCIKEnhanced2_prc...\n",
+      "['Symbol_SECCIKEnhanced2', '3.61', '5.47', '9.08']\n",
+      "flow for target entity Symbol_SECCIKSymbol..\n",
+      "- EXEC dbo.PullData_Symbol_SECCIKSymbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_SECCIKSymbol2_prc...\n",
+      "['Symbol_SECCIKSymbol2', '4.00', '2.59', '6.59']\n",
+      "flow for target entity Symbol_SedolEnhanced..\n",
+      "- EXEC dbo.PullData_Symbol_SedolEnhanced2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_SedolEnhanced2_prc...\n",
+      "['Symbol_SedolEnhanced2', '02:24', '02:39', '05:03']\n",
+      "flow for target entity Symbol_FTSEDOLSymbol..\n",
+      "- EXEC dbo.PullData_Symbol_FTSEDOLSymbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_FTSEDOLSymbol2_prc...\n",
+      "['Symbol_FTSEDOLSymbol2', '01:04', '01:04', '02:09']\n"
      ]
     }
    ],
@@ -103,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9e97f970",
    "metadata": {},
    "outputs": [
@@ -137,21 +174,101 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Symbol_IBESTickerEnhanced2</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>1.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Symbol_TickerEnhanced2</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>34.77</td>\n",
+       "      <td>01:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Symbol_CusipEnhanced2</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>29.43</td>\n",
+       "      <td>55.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>Symbol_FTCusip6Symbol2</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>2.94</td>\n",
-       "      <td>4.63</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>2.97</td>\n",
+       "      <td>6.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Symbol_FTCusip9Symbol2</td>\n",
+       "      <td>19.16</td>\n",
+       "      <td>11.67</td>\n",
+       "      <td>30.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Symbol_FTISINSymbol2</td>\n",
+       "      <td>50.19</td>\n",
+       "      <td>58.97</td>\n",
+       "      <td>01:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Symbol_ISINEnhanced2</td>\n",
+       "      <td>59.90</td>\n",
+       "      <td>01:16</td>\n",
+       "      <td>02:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Symbol_SECCIKEnhanced2</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>5.47</td>\n",
+       "      <td>9.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Symbol_SECCIKSymbol2</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>6.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Symbol_SedolEnhanced2</td>\n",
+       "      <td>02:24</td>\n",
+       "      <td>02:39</td>\n",
+       "      <td>05:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Symbol_FTSEDOLSymbol2</td>\n",
+       "      <td>01:04</td>\n",
+       "      <td>01:04</td>\n",
+       "      <td>02:09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Entity name Pull SP Merge SP   sum\n",
-       "0  Symbol_FTCusip6Symbol2    1.69     2.94  4.63"
+       "                   Entity name Pull SP Merge SP    sum\n",
+       "0   Symbol_IBESTickerEnhanced2    0.41     1.07   1.48\n",
+       "1       Symbol_TickerEnhanced2   29.88    34.77  01:04\n",
+       "2        Symbol_CusipEnhanced2   25.70    29.43  55.13\n",
+       "3       Symbol_FTCusip6Symbol2    3.19     2.97   6.16\n",
+       "4       Symbol_FTCusip9Symbol2   19.16    11.67  30.82\n",
+       "5         Symbol_FTISINSymbol2   50.19    58.97  01:49\n",
+       "6         Symbol_ISINEnhanced2   59.90    01:16  02:15\n",
+       "7       Symbol_SECCIKEnhanced2    3.61     5.47   9.08\n",
+       "8         Symbol_SECCIKSymbol2    4.00     2.59   6.59\n",
+       "9        Symbol_SedolEnhanced2   02:24    02:39  05:03\n",
+       "10       Symbol_FTSEDOLSymbol2   01:04    01:04  02:09"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
