--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "09124eba",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import timedelta\n",
+    "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
     "import pyodbc\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e3f4aaec",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -57,70 +58,178 @@
      "output_type": "stream",
      "text": [
       "connecting...\n",
-      "Connection successful!\n",
-      "flow for target entity Symbol_IBESTickerEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_IBESTickerEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_IBESTickerEnhanced2_prc...\n",
-      "['Symbol_IBESTickerEnhanced2', '0.41', '1.07', '1.48']\n",
-      "flow for target entity Symbol_TickerEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_TickerEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_TickerEnhanced2_prc...\n",
-      "['Symbol_TickerEnhanced2', '29.88', '34.77', '01:04']\n",
-      "flow for target entity Symbol_CusipEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_CusipEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_CusipEnhanced2_prc...\n",
-      "['Symbol_CusipEnhanced2', '25.70', '29.43', '55.13']\n",
-      "flow for target entity Symbol_FTCusip6Symbol..\n",
-      "- EXEC dbo.PullData_Symbol_FTCusip6Symbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_FTCusip6Symbol2_prc...\n",
-      "['Symbol_FTCusip6Symbol2', '3.19', '2.97', '6.16']\n",
-      "flow for target entity Symbol_FTCusip9Symbol..\n",
-      "- EXEC dbo.PullData_Symbol_FTCusip9Symbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_FTCusip9Symbol2_prc...\n",
-      "['Symbol_FTCusip9Symbol2', '19.16', '11.67', '30.82']\n",
-      "flow for target entity Symbol_FTISINSymbol..\n",
-      "- EXEC dbo.PullData_Symbol_FTISINSymbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_FTISINSymbol2_prc...\n",
-      "['Symbol_FTISINSymbol2', '50.19', '58.97', '01:49']\n",
-      "flow for target entity Symbol_ISINEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_ISINEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_ISINEnhanced2_prc...\n",
-      "['Symbol_ISINEnhanced2', '59.90', '01:16', '02:15']\n",
-      "flow for target entity Symbol_SECCIKEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_SECCIKEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_SECCIKEnhanced2_prc...\n",
-      "['Symbol_SECCIKEnhanced2', '3.61', '5.47', '9.08']\n",
-      "flow for target entity Symbol_SECCIKSymbol..\n",
-      "- EXEC dbo.PullData_Symbol_SECCIKSymbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_SECCIKSymbol2_prc...\n",
-      "['Symbol_SECCIKSymbol2', '4.00', '2.59', '6.59']\n",
-      "flow for target entity Symbol_SedolEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_SedolEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_SedolEnhanced2_prc...\n",
-      "['Symbol_SedolEnhanced2', '02:24', '02:39', '05:03']\n",
-      "flow for target entity Symbol_FTSEDOLSymbol..\n",
-      "- EXEC dbo.PullData_Symbol_FTSEDOLSymbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_FTSEDOLSymbol2_prc...\n",
-      "['Symbol_FTSEDOLSymbol2', '01:04', '01:04', '02:09']\n"
+      "Connection successful!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/9 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity GICS_GICS..\n",
+      "- EXEC dbo.PullData_GICS_GICS2_prc...\n",
+      "- EXEC dbo.MergeData_GICS_GICS2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 11%|█         | 1/9 [00:01<00:13,  1.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity Symbol_GVKeySymbol..\n",
+      "- EXEC dbo.PullData_Symbol_GVKeySymbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_GVKeySymbol2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 22%|██▏       | 2/9 [00:04<00:16,  2.40s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity Symbol_GVKeyEnhanced..\n",
+      "- EXEC dbo.PullData_Symbol_GVKeyEnhanced2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_GVKeyEnhanced2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 3/9 [00:07<00:16,  2.81s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity Symbol_DandBSymbol..\n",
+      "- EXEC dbo.PullData_Symbol_DandBSymbol2_prc...\n",
+      "- EXEC dbo.MergeData_Symbol_DandBSymbol2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 44%|████▍     | 4/9 [01:26<02:44, 32.86s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity KeyDev_FutureEvent..\n",
+      "- EXEC dbo.PullData_KeyDev_FutureEvent2_prc...\n",
+      "- EXEC dbo.MergeData_KeyDev_FutureEvent2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 56%|█████▌    | 5/9 [04:52<06:21, 95.33s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity KeyDev_FutureEventToObjectToEventType..\n",
+      "- EXEC dbo.PullData_KeyDev_FutureEventToObjectToEventType2_prc...\n",
+      "- EXEC dbo.MergeData_KeyDev_FutureEventToObjectToEventType2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 6/9 [05:54<04:11, 83.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity FutureEventMkt_FutureEventMkt..\n",
+      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMkt2_prc...\n",
+      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMkt2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78%|███████▊  | 7/9 [09:40<04:20, 130.33s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity FutureEventMkt_FutureEventMktSplitInfo..\n",
+      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n",
+      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 89%|████████▉ | 8/9 [10:15<01:40, 100.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flow for target entity FutureEventMkt_FutureEventMktToObjectToEventType..\n",
+      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n",
+      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [11:49<00:00, 78.79s/it] \n"
      ]
     }
    ],
    "source": [
-    "entity_names =  ['Symbol_IBESTickerEnhanced',\n",
-    "        'Symbol_TickerEnhanced',\n",
-    "        'Symbol_CusipEnhanced',\n",
-    "        'Symbol_FTCusip6Symbol',\n",
-    "        'Symbol_FTCusip9Symbol',\n",
-    "        'Symbol_FTISINSymbol',\n",
-    "        'Symbol_ISINEnhanced',\n",
-    "        'Symbol_SECCIKEnhanced',\n",
-    "        'Symbol_SECCIKSymbol',\n",
-    "        'Symbol_SedolEnhanced',\n",
-    "        'Symbol_FTSEDOLSymbol',]\n",
+    "entity_names = [  \n",
+    "    'GICS_GICS',\n",
+    "    'Symbol_GVKeySymbol',\n",
+    "    'Symbol_GVKeyEnhanced',\n",
+    "    'Symbol_DandBSymbol',\n",
+    "    'KeyDev_FutureEvent',\n",
+    "    'KeyDev_FutureEventToObjectToEventType',\n",
+    "    'FutureEventMkt_FutureEventMkt',\n",
+    "    'FutureEventMkt_FutureEventMktSplitInfo',\n",
+    "    'FutureEventMkt_FutureEventMktToObjectToEventType'  \n",
+    "    ]\n",
+    "\n",
     "\n",
     "durations = []\n",
     "with SQL_Communicator() as sc:\n",
-    "    for en in entity_names:\n",
+    "    for en in tqdm(entity_names):\n",
     "        print(f'flow for target entity {en}..')\n",
     "        en2 = nc.default_rename(en)\n",
     "        sp_names = [nc.pull_sp_name(en2), nc.merge_sp_name(en2)]\n",
@@ -140,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9e97f970",
    "metadata": {},
    "outputs": [
@@ -174,101 +283,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Symbol_IBESTickerEnhanced2</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>1.07</td>\n",
-       "      <td>1.48</td>\n",
+       "      <td>GICS_GICS2</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>1.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Symbol_TickerEnhanced2</td>\n",
-       "      <td>29.88</td>\n",
-       "      <td>34.77</td>\n",
-       "      <td>01:04</td>\n",
+       "      <td>Symbol_GVKeySymbol2</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>2.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Symbol_CusipEnhanced2</td>\n",
-       "      <td>25.70</td>\n",
-       "      <td>29.43</td>\n",
-       "      <td>55.13</td>\n",
+       "      <td>Symbol_GVKeyEnhanced2</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>3.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Symbol_FTCusip6Symbol2</td>\n",
-       "      <td>3.19</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>6.16</td>\n",
+       "      <td>Symbol_DandBSymbol2</td>\n",
+       "      <td>37.63</td>\n",
+       "      <td>41.30</td>\n",
+       "      <td>01:18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Symbol_FTCusip9Symbol2</td>\n",
-       "      <td>19.16</td>\n",
-       "      <td>11.67</td>\n",
-       "      <td>30.82</td>\n",
+       "      <td>KeyDev_FutureEvent2</td>\n",
+       "      <td>02:39</td>\n",
+       "      <td>46.46</td>\n",
+       "      <td>03:26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Symbol_FTISINSymbol2</td>\n",
-       "      <td>50.19</td>\n",
-       "      <td>58.97</td>\n",
-       "      <td>01:49</td>\n",
+       "      <td>KeyDev_FutureEventToObjectToEventType2</td>\n",
+       "      <td>28.35</td>\n",
+       "      <td>33.26</td>\n",
+       "      <td>01:01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Symbol_ISINEnhanced2</td>\n",
-       "      <td>59.90</td>\n",
-       "      <td>01:16</td>\n",
-       "      <td>02:15</td>\n",
+       "      <td>FutureEventMkt_FutureEventMkt2</td>\n",
+       "      <td>02:33</td>\n",
+       "      <td>01:12</td>\n",
+       "      <td>03:45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Symbol_SECCIKEnhanced2</td>\n",
-       "      <td>3.61</td>\n",
-       "      <td>5.47</td>\n",
-       "      <td>9.08</td>\n",
+       "      <td>FutureEventMkt_FutureEventMktSplitInfo2</td>\n",
+       "      <td>16.89</td>\n",
+       "      <td>18.58</td>\n",
+       "      <td>35.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Symbol_SECCIKSymbol2</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>2.59</td>\n",
-       "      <td>6.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Symbol_SedolEnhanced2</td>\n",
-       "      <td>02:24</td>\n",
-       "      <td>02:39</td>\n",
-       "      <td>05:03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Symbol_FTSEDOLSymbol2</td>\n",
-       "      <td>01:04</td>\n",
-       "      <td>01:04</td>\n",
-       "      <td>02:09</td>\n",
+       "      <td>FutureEventMkt_FutureEventMktToObjectToEventType2</td>\n",
+       "      <td>42.73</td>\n",
+       "      <td>50.40</td>\n",
+       "      <td>01:33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Entity name Pull SP Merge SP    sum\n",
-       "0   Symbol_IBESTickerEnhanced2    0.41     1.07   1.48\n",
-       "1       Symbol_TickerEnhanced2   29.88    34.77  01:04\n",
-       "2        Symbol_CusipEnhanced2   25.70    29.43  55.13\n",
-       "3       Symbol_FTCusip6Symbol2    3.19     2.97   6.16\n",
-       "4       Symbol_FTCusip9Symbol2   19.16    11.67  30.82\n",
-       "5         Symbol_FTISINSymbol2   50.19    58.97  01:49\n",
-       "6         Symbol_ISINEnhanced2   59.90    01:16  02:15\n",
-       "7       Symbol_SECCIKEnhanced2    3.61     5.47   9.08\n",
-       "8         Symbol_SECCIKSymbol2    4.00     2.59   6.59\n",
-       "9        Symbol_SedolEnhanced2   02:24    02:39  05:03\n",
-       "10       Symbol_FTSEDOLSymbol2   01:04    01:04  02:09"
+       "                                         Entity name Pull SP Merge SP    sum\n",
+       "0                                         GICS_GICS2    1.45     0.27   1.71\n",
+       "1                                Symbol_GVKeySymbol2    1.49     1.39   2.88\n",
+       "2                              Symbol_GVKeyEnhanced2    1.45     1.83   3.28\n",
+       "3                                Symbol_DandBSymbol2   37.63    41.30  01:18\n",
+       "4                                KeyDev_FutureEvent2   02:39    46.46  03:26\n",
+       "5             KeyDev_FutureEventToObjectToEventType2   28.35    33.26  01:01\n",
+       "6                     FutureEventMkt_FutureEventMkt2   02:33    01:12  03:45\n",
+       "7            FutureEventMkt_FutureEventMktSplitInfo2   16.89    18.58  35.47\n",
+       "8  FutureEventMkt_FutureEventMktToObjectToEventType2   42.73    50.40  01:33"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
