--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e3f4aaec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -65,167 +65,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/9 [00:00<?, ?it/s]"
+      "  0%|          | 0/22 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flow for target entity GICS_GICS..\n",
-      "- EXEC dbo.PullData_GICS_GICS2_prc...\n",
-      "- EXEC dbo.MergeData_GICS_GICS2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|█         | 1/9 [00:01<00:13,  1.72s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity Symbol_GVKeySymbol..\n",
-      "- EXEC dbo.PullData_Symbol_GVKeySymbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_GVKeySymbol2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 22%|██▏       | 2/9 [00:04<00:16,  2.40s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity Symbol_GVKeyEnhanced..\n",
-      "- EXEC dbo.PullData_Symbol_GVKeyEnhanced2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_GVKeyEnhanced2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 3/9 [00:07<00:16,  2.81s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity Symbol_DandBSymbol..\n",
-      "- EXEC dbo.PullData_Symbol_DandBSymbol2_prc...\n",
-      "- EXEC dbo.MergeData_Symbol_DandBSymbol2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 44%|████▍     | 4/9 [01:26<02:44, 32.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity KeyDev_FutureEvent..\n",
-      "- EXEC dbo.PullData_KeyDev_FutureEvent2_prc...\n",
-      "- EXEC dbo.MergeData_KeyDev_FutureEvent2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 5/9 [04:52<06:21, 95.33s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity KeyDev_FutureEventToObjectToEventType..\n",
-      "- EXEC dbo.PullData_KeyDev_FutureEventToObjectToEventType2_prc...\n",
-      "- EXEC dbo.MergeData_KeyDev_FutureEventToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 6/9 [05:54<04:11, 83.87s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity FutureEventMkt_FutureEventMkt..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMkt2_prc...\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMkt2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 78%|███████▊  | 7/9 [09:40<04:20, 130.33s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity FutureEventMkt_FutureEventMktSplitInfo..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktSplitInfo2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 89%|████████▉ | 8/9 [10:15<01:40, 100.13s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flow for target entity FutureEventMkt_FutureEventMktToObjectToEventType..\n",
-      "- EXEC dbo.PullData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n",
-      "- EXEC dbo.MergeData_FutureEventMkt_FutureEventMktToObjectToEventType2_prc...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9/9 [11:49<00:00, 78.79s/it] \n"
+      "flow for target entity AddtlCompany_Address..\n",
+      "- EXEC dbo.PullData_AddtlCompany_Address2_prc...\n",
+      "duration 01:11\n",
+      "- EXEC dbo.MergeData_AddtlCompany_Address2_prc...\n"
      ]
     }
    ],
    "source": [
-    "entity_names = [  \n",
-    "    'GICS_GICS',\n",
-    "    'Symbol_GVKeySymbol',\n",
-    "    'Symbol_GVKeyEnhanced',\n",
-    "    'Symbol_DandBSymbol',\n",
-    "    'KeyDev_FutureEvent',\n",
-    "    'KeyDev_FutureEventToObjectToEventType',\n",
-    "    'FutureEventMkt_FutureEventMkt',\n",
-    "    'FutureEventMkt_FutureEventMktSplitInfo',\n",
-    "    'FutureEventMkt_FutureEventMktToObjectToEventType'  \n",
-    "    ]\n",
+    "entity_names =[\n",
+    "    \"AddtlCompany_Address\",\n",
+    "    \"AddtlCompany_BusinessDescription\",\n",
+    "    \"AddtlCompany_LongBusinessDescription\",\n",
+    "    \"CompanyBiteSize_CompanyBiteSize\",\n",
+    "    \"CompanyGeosOfInt_CompanyGeosOfInterest\",\n",
+    "    \"CompanyIndOfInt_CompanyIndustriesOfInterest\",\n",
+    "    \"CompanyStagesOfInt_CompanyStagesOfInterest\",\n",
+    "    \"GICS_GICS\",\n",
+    "    \"KeyDev_FutureEvent\",\n",
+    "    \"KeyDev_FutureEventToObjectToEventType\",\n",
+    "    \"KeyDev_KeyDev\",\n",
+    "    \"KeyDev_KeyDevToObjectToEventType\",\n",
+    "    \"Professional_PersonProfessionalCompensation\",\n",
+    "    \"Professional_PersonProfessional\",\n",
     "\n",
+    "    \"Symbol_DandBSymbol\",\n",
+    "    \"FutureEventMkt_FutureEventMkt\",\n",
+    "    \"FutureEventMkt_FutureEventMktSplitInfo\",\n",
+    "    \"FutureEventMkt_FutureEventMktToObjectToEventType\",\n",
+    "\n",
+    "    \"KeyDevPlus_KeyDev\",\n",
+    "    \"KeyDevPlus_KeyDevToObjectToEventType\",\n",
+    "    \"CompDetail_CompensationAdjustment\",\n",
+    "    \"CompDetail_CompensationDetail\"\n",
+    "]\n",
     "\n",
     "durations = []\n",
     "with SQL_Communicator() as sc:\n",
@@ -237,9 +117,13 @@
     "        for sp_name in sp_names:\n",
     "            exec_stm = f\"EXEC {sp_name}\"\n",
     "            print(f'- {exec_stm}...')\n",
-    "            td = sc.get_execution_metrics(exec_stm)\n",
-    "            ent_durs.append(format_time_delta(td))\n",
-    "            flow_td += td\n",
+    "            try:\n",
+    "                td = sc.get_execution_metrics(exec_stm)\n",
+    "                ent_durs.append(format_time_delta(td))\n",
+    "                flow_td += td\n",
+    "                print(f'  - duration {format_time_delta(td)}')\n",
+    "            except ex:\n",
+    "                print(f'execution failed {ex}')\n",
     "        ent_durs.append(format_time_delta(flow_td))\n",
     "        durations.append(ent_durs)\n",
     "        # ent_durs.append(sum(ent_durs))\n",
