new pefformance metrics

--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "09124eba",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import timedelta\n",
+    "from decimal import Decimal\n",
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e3f4aaec",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7d2590ed",
    "metadata": {},
    "outputs": [
@@ -65,17 +66,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/22 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flow for target entity AddtlCompany_Address..\n",
-      "- EXEC dbo.PullData_AddtlCompany_Address2_prc...\n",
-      "duration 01:11\n",
-      "- EXEC dbo.MergeData_AddtlCompany_Address2_prc...\n"
+      "flow for target entity GICS_GICS..\n",
+      "- EXEC dbo.PullData_GICS_GICS2_prc...\n",
+      "  - duration 49.33\n",
+      "rows 49569, stage table size: 2.515625\n",
+      "- EXEC dbo.MergeData_GICS_GICS2_prc...\n",
+      "  - duration 1.15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [01:26<00:00, 86.91s/it]\n"
      ]
     }
    ],
@@ -107,14 +117,16 @@
     "    \"CompDetail_CompensationDetail\"\n",
     "]\n",
     "\n",
+    "\n",
     "durations = []\n",
     "with SQL_Communicator() as sc:\n",
     "    for en in tqdm(entity_names):\n",
     "        print(f'flow for target entity {en}..')\n",
     "        en2 = nc.default_rename(en)\n",
     "        sp_names = [nc.pull_sp_name(en2), nc.merge_sp_name(en2)]\n",
+    "        stage_tbl = nc.stg_table_name(en)\n",
     "        ent_durs, flow_td = [en2], timedelta()  \n",
-    "        for sp_name in sp_names:\n",
+    "        for i, sp_name in enumerate(sp_names):\n",
     "            exec_stm = f\"EXEC {sp_name}\"\n",
     "            print(f'- {exec_stm}...')\n",
     "            try:\n",
@@ -122,18 +134,21 @@
     "                ent_durs.append(format_time_delta(td))\n",
     "                flow_td += td\n",
     "                print(f'  - duration {format_time_delta(td)}')\n",
+    "                if i == 0:  ## pull sp\n",
+    "                    rows_count, table_size = sc.get_table_size(stage_tbl)\n",
+    "                    print(f'rows {rows_count}, stage table size: {table_size}')\n",
     "            except ex:\n",
     "                print(f'execution failed {ex}')\n",
-    "        ent_durs.append(format_time_delta(flow_td))\n",
+    "\n",
+    "        velocity = table_size / Decimal(flow_td.total_seconds()) if flow_td.total_seconds() else 0 \n",
+    "        ent_durs.extend([format_time_delta(flow_td),  rows_count, table_size, f'{velocity:7.2f}'])\n",
     "        durations.append(ent_durs)\n",
-    "        # ent_durs.append(sum(ent_durs))\n",
-    "columns = ['Entity name', 'Pull SP', 'Merge SP',  'sum']\n",
-    "df = pd.DataFrame(durations, columns = columns)\n"
+    "        # ent_durs.append(sum(ent_durs))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9e97f970",
    "metadata": {},
    "outputs": [
@@ -162,95 +177,39 @@
        "      <th>Pull SP</th>\n",
        "      <th>Merge SP</th>\n",
        "      <th>sum</th>\n",
+       "      <th>rows_count</th>\n",
+       "      <th>table_size, MB</th>\n",
+       "      <th>velocity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>GICS_GICS2</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>1.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Symbol_GVKeySymbol2</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>1.39</td>\n",
-       "      <td>2.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Symbol_GVKeyEnhanced2</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>3.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Symbol_DandBSymbol2</td>\n",
-       "      <td>37.63</td>\n",
-       "      <td>41.30</td>\n",
-       "      <td>01:18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>KeyDev_FutureEvent2</td>\n",
-       "      <td>02:39</td>\n",
-       "      <td>46.46</td>\n",
-       "      <td>03:26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>KeyDev_FutureEventToObjectToEventType2</td>\n",
-       "      <td>28.35</td>\n",
-       "      <td>33.26</td>\n",
-       "      <td>01:01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>FutureEventMkt_FutureEventMkt2</td>\n",
-       "      <td>02:33</td>\n",
-       "      <td>01:12</td>\n",
-       "      <td>03:45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>FutureEventMkt_FutureEventMktSplitInfo2</td>\n",
-       "      <td>16.89</td>\n",
-       "      <td>18.58</td>\n",
-       "      <td>35.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>FutureEventMkt_FutureEventMktToObjectToEventType2</td>\n",
-       "      <td>42.73</td>\n",
-       "      <td>50.40</td>\n",
-       "      <td>01:33</td>\n",
+       "      <td>49.33</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>50.48</td>\n",
+       "      <td>49569</td>\n",
+       "      <td>2.515625</td>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Entity name Pull SP Merge SP    sum\n",
-       "0                                         GICS_GICS2    1.45     0.27   1.71\n",
-       "1                                Symbol_GVKeySymbol2    1.49     1.39   2.88\n",
-       "2                              Symbol_GVKeyEnhanced2    1.45     1.83   3.28\n",
-       "3                                Symbol_DandBSymbol2   37.63    41.30  01:18\n",
-       "4                                KeyDev_FutureEvent2   02:39    46.46  03:26\n",
-       "5             KeyDev_FutureEventToObjectToEventType2   28.35    33.26  01:01\n",
-       "6                     FutureEventMkt_FutureEventMkt2   02:33    01:12  03:45\n",
-       "7            FutureEventMkt_FutureEventMktSplitInfo2   16.89    18.58  35.47\n",
-       "8  FutureEventMkt_FutureEventMktToObjectToEventType2   42.73    50.40  01:33"
+       "  Entity name Pull SP Merge SP    sum  rows_count table_size, MB velocity\n",
+       "0  GICS_GICS2   49.33     1.15  50.48       49569       2.515625     0.05"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "columns = ['Entity name', 'Pull SP', 'Merge SP',  'sum', 'rows_count', 'table_size, MB', 'velocity']\n",
+    "df = pd.DataFrame(durations, columns = columns)\n",
     "df"
    ]
   }
